# hpms

./: .gitignore  .jscpd.json  .mypy.ini  .pre-commit-config.yaml  .pylintrc  AGENTS.md  compose.yaml  contributing.md  env.example  evaluate_dataset.py  generate_dataset.py  pyproject.toml  readme.md  upload_to_gdrive.py  utils.sh
.github/actions/setup-gdrive/: action.yml
.github/workflows/: functional-testing.yml  regression-test.yml  super-linter.yml
data/: companion-system-prompt.txt  comprehensive_statistics.json  dataset-2-conversation-starters.csv  dataset-3-conversation-starters.csv  psychiatrist-system-prompt.txt  rate-conversations-prompt.txt  rate-messages-prompt.txt
hpms/: __init__.py  constants.py
hpms/evaluation/: agg_reg_test.py  reg_test_categories_plots.py  reg_test_categories_table.py  reg_test_llm_judge_ratings_boxplot.py  reg_test_table.py  self_bleu.py  unique_n_grams.py  word_cloud.py  zipf.py
hpms/loading/: __init__.py  constants.py  data_loading.py  models.py
hpms/monitoring/: __init__.py  constants.py  models.py
hpms/monitoring/api/: __init__.py  (+2 more)
hpms/plot/: config.py  self_bleu_vs_asr.py
hpms/rating/: llama_guard.py  llm_judge.py  openai_moderation.py
hpms/utils/: __init__.py  cache.py  constants.py  data.py  env.py  moderation.py  text.py
notebooks/: reg-test-figs-multiple-days.ipynb  sample-open-ended-conversation-starters.ipynb  select-model-for-regression-testing.ipynb
script/: bootstrap  install  lint  lint-precommit  lint-superlinter  test
tests/: test_loading_constants.py  test_regression.py  test_utils_text.py
(+81 files in other folders)
